force-app/main/default/objects/DocuSign_Credential__c/DocuSign_Credential__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Used to Store DocuSign Credentials and Signer 2 Recipient/Terry Glogovsky</description>
    <label>DocuSign Credential</label>
</CustomObject>