force-app/main/default/objects/DocuSign_Credential__c/fields/Account_Id__c.field-meta.xml
<CustomField>
    <fullName>Account_Id__c</fullName>
    <description>This is the API Account id listed in DocuSign Admin&apos;s API and Keys page</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>This is the API Account id listed in DocuSign Admin&apos;s API and Keys page</inlineHelpText>
    <label>Account Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>