force-app/main/default/objects/DocuSign_Credential__c/fields/End_Point__c.field-meta.xml
<CustomField>
    <fullName>End_Point__c</fullName>
    <description>Reference to a URI that accepts web requests</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Reference to a URI that accepts web requests</inlineHelpText>
    <label>End Point</label>
    <type>Url</type>
</CustomField>