force-app/main/default/objects/DocuSign_Credential__c/fields/Integrator_Key__c.field-meta.xml
<CustomField>
    <fullName>Integrator_Key__c</fullName>
    <description>An Integrator Key (also called a client_id) is a unique identifier that is used to identify your integration and authenticate with the DocuSign platform.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>An Integrator Key (also called a client_id) is a unique identifier that is used to identify your integration and authenticate with the DocuSign platform.</inlineHelpText>
    <label>Integrator Key</label>
    <length>255</length>
    <type>Text</type>
</CustomField>