force-app/main/default/objects/DocuSign_Credential__c/fields/OnSigningComplete__c.field-meta.xml
<CustomField>
    <fullName>OnSigningComplete__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Confirmation Page after DocuSign Signing has been completed</inlineHelpText>
    <label>OnSigningComplete</label>
    <type>Url</type>
</CustomField>