force-app/main/default/objects/DocuSign_Credential__c/fields/Password__c.field-meta.xml
<CustomField>
    <fullName>Password__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>This is the Password for DocuSign Credential</inlineHelpText>
    <label>Password</label>
    <length>255</length>
    <type>Text</type>
</CustomField>