force-app/main/default/objects/DocuSign_Credential__c/fields/Recipient_Email__c.field-meta.xml
<CustomField>
    <fullName>Recipient_Email__c</fullName>
    <description>This is the Countersigns’ Email Address</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>This is the Countersigns’ Email Address</inlineHelpText>
    <label>Recipient Email</label>
    <type>Email</type>
</CustomField>