force-app/main/default/objects/DocuSign_Credential__c/fields/Recipient_Name__c.field-meta.xml
<CustomField>
    <fullName>Recipient_Name__c</fullName>
    <description>This is the Countersign’s Name</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>This is the Countersign’s Name</inlineHelpText>
    <label>Recipient Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>