force-app/main/default/objects/DocuSign_Credential__c/fields/Recipient_Title__c.field-meta.xml
<CustomField>
    <fullName>Recipient_Title__c</fullName>
    <description>This is the Countersign’s Title</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>This is the Countersign’s Title</inlineHelpText>
    <label>Recipient Title</label>
    <length>255</length>
    <type>Text</type>
</CustomField>