force-app/main/default/objects/DocuSign_Credential__c/fields/Username__c.field-meta.xml
<CustomField>
    <fullName>Username__c</fullName>
    <description>This is the Username for DocuSign Credential</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>This is the Username for DocuSign Credential</inlineHelpText>
    <label>Username</label>
    <length>255</length>
    <type>Text</type>
</CustomField>